--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redux": "^5.0.1",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
