--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.9",
     "redux": "^5.0.1",
     "tailwindcss": "^2.0.1"
   },
@@ -16,6 +17,10 @@
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@types/react": "^17.0.85",
+    "@types/react-dom": "^17.0.26",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux": "^3.6.31",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.1",
@@ -25,6 +30,8 @@
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
