--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@types/react-redux": "^7.1.34",
     "@types/redux": "^3.6.31",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.2.1",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
