--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.9",
-    "redux": "^5.0.1",
-    "tailwindcss": "^2.0.1"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
@@ -23,16 +22,18 @@
     "@types/react-dom": "^17.0.26",
     "@types/react-redux": "^7.1.34",
     "@types/redux": "^3.6.31",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^1.3.1",
-    "postcss": "^8.1.10",
-    "postcss-loader": "^4.1.0",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^4.3.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.1",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "webpack": "^5.3.2",
